refactor: 스페이스 생성
Change-Id: I0e763fc32031b3a6c4a747acf3fe276bcb2ccca0